apps/base/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "jellyfin:latest",
            "namespace": "media"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"jellyfin\")].image",
          "paused": false
        }
      ]
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app: jellyfin
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/New_York
            - name: JELLYFIN_PublishedServerUrl
              value: jellyfin.nic-a.net
          image: jellyfin:latest
          name: jellyfin
          ports:
            - containerPort: 8096
            - containerPort: 8920
            - containerPort: 7359
            - containerPort: 1900
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /mnt/media
              name: cephfs-media
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
          startupProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 30
            failureThreshold: 60
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            runAsNonRoot: false
            sysctls:
              - name: fs.inotify.max_user_watches
                value: 10485760
#        - env:
#            - name: PGID
#              value: "124"
#            - name: PUID
#              value: "116"
#            - name: TZ
#              value: America/New_York
#          image: hrfee/jfa-go
#          name: jellyfin-accounts
#          ports:
#            - containerPort: 8056
#          resources: {}
#          volumeMounts:
#            - mountPath: /data
#              name: jellyfin-accounts-config
#            - mountPath: /jf
#              name: jellyfin-config
      restartPolicy: Always
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-accounts-config
          persistentVolumeClaim:
            claimName: jellyfin-accounts-config
        - name: cephfs-media
          nfs:
            server: lb.iad1.nic-a.net
            path: /media
