apps/base/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
    metallb.universe.tf/allow-shared-ip: media-stack
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - name: "web"
      protocol: TCP
      port: 8096
      targetPort: 8096
    - name: "discovery"
      protocol: UDP
      port: 7359
      targetPort: 7359
    - name: "dlna"
      protocol: UDP
      port: 1900
      targetPort: 1900
    - name: "accounts"
      protocol: TCP
      port: 8056
      targetPort: 8056
